--- a/frequently-used.html
+++ b/frequently-used.html
@@ -49,14 +49,14 @@
     <div class="container my-4">
         <h1 class="mb-3">Frequently Used Calculators</h1>
         <p class="lead">
-            These calculators are commonly used by pathologists for breast cancer prognostication and reporting[#1].
+            These calculators are commonly used by pathologists for breast cancer prognostication and reporting.
         </p>
         <div class="row g-4">
             <div class="col-md-6 col-lg-3">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Magee Equations Calculator</h5>
-                        <p class="card-text flex-grow-1">Estimate Oncotype DX recurrence score using pathology data. Contains all information from the UPMC Magee Equations webpage[#1].</p>
+                        <p class="card-text flex-grow-1">Estimate Oncotype DX recurrence score using pathology data. Contains all information from the UPMC Magee Equations webpage.</p>
                         <a href="magee.html" class="btn btn-primary mt-auto">Open Calculator</a>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">H-score Calculator</h5>
                         <p class="card-text flex-grow-1">
-                            Calculates the semi-quantitative immunohistochemical H-score for ER, PR, or other stains. The H-score is the sum of the percent staining multiplied by intensity (0–3). Range: 0–300[#1].
+                            Calculates the semi-quantitative immunohistochemical H-score for ER, PR, or other stains. The H-score is the sum of the percent staining multiplied by intensity (0–3). Range: 0–300.
                         </p>
                         <a href="hscore.html" class="btn btn-primary mt-auto">Open Calculator</a>
                     </div>
@@ -77,7 +77,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Nottingham Prognostic Index Calculator</h5>
                         <p class="card-text flex-grow-1">
-                            Calculates the Nottingham Prognostic Index (NPI) for breast cancer using tumor size, lymph node status, and grade[#1].
+                            Calculates the Nottingham Prognostic Index (NPI) for breast cancer using tumor size, lymph node status, and grade.
                         </p>
                         <a href="npi.html" class="btn btn-primary mt-auto">Open Calculator</a>
                     </div>
@@ -88,7 +88,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Pre-operative Endocrine Prognostic Index (PEPI score) Calculator</h5>
                         <p class="card-text flex-grow-1">
-                            Calculates PEPI score for those who received neoadjuvant endocrine therapy alone, based on pT stage, pN stage, Ki67 level, and ER status[#1].
+                            Calculates PEPI score for those who received neoadjuvant endocrine therapy alone, based on pT stage, pN stage, Ki67 level, and ER status.
                         </p>
                         <a href="pepi.html" class="btn btn-primary mt-auto">Open Calculator</a>
                     </div>
@@ -99,7 +99,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Residual Cancer Burden Calculator</h5>
                         <p class="card-text flex-grow-1">
-                            Tool for residual cancer burden assessment after neoadjuvant therapy[#1].
+                            Tool for residual cancer burden assessment after neoadjuvant therapy.
                         </p>
                         <a href="https://www.mdanderson.org/breastcancer_RCB" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
                     </div>
