--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     <div class="container my-4">
         <h1 class="mb-3">Breast Pathology Calculators</h1>
         <p class="lead">
-            This website provides a comprehensive suite of breast cancer calculators and risk assessment tools for healthcare professionals. The calculators are designed to assist with breast cancer prognostication, risk stratification, and treatment planning using validated models and up-to-date clinical evidence. Each tool is presented with transparent methodology and reference information, supporting informed clinical decision-making in both pathology and multidisciplinary settings[#1].
+            This website provides a comprehensive suite of breast cancer calculators and risk assessment tools for healthcare professionals. The calculators are designed to assist with breast cancer prognostication, risk stratification, and treatment planning using validated models and up-to-date clinical evidence. Each tool is presented with transparent methodology and reference information, supporting informed clinical decision-making in both pathology and multidisciplinary settings.
         </p>
         <p>
-            The calculators are grouped for ease of navigation:
+            The calculators are grouped as the following:
         </p>
         <ul>
             <li><strong>Frequently Used Calculators:</strong> Core tools for pathologists, including Magee Equations, H-score, NPI, PEPI, and Residual Cancer Burden.</li>
@@ -104,12 +104,12 @@
 
         <div class="section-title">Acknowledgements</div>
         <p>
-            [enter here]
+            tell me what to write here chacha
         </p>
 
         <div class="section-title">Disclaimer</div>
         <div class="alert alert-warning" role="alert">
-            These calculators should only be used by medical professionals who understand their usefulness and limitations. Medical professionals should use these calculators at their own discretion and this information should not be used for the diagnosis or treatment of any health problem or disease. The information is not intended to replace clinical judgment or guide individual patient care in any manner and is not provided in the course of a professional relationship between a health care provider and a patient. The website creators are not liable for any direct, indirect, incidental, special, consequential or punitive damages arising in any way from the actions taken by medical professionals based on the information provided by the calculators or any other information set forth herein. The creators of this website hereby disclaim any warranty of any kind, express or implied, including but not limited to the implied warranties of title, noninfringement, merchantability and fitness for a particular use or purpose[#1].
+            These calculators should only be used by medical professionals who understand their usefulness and limitations. Medical professionals should use these calculators at their own discretion and this information should not be used for the diagnosis or treatment of any health problem or disease. The information is not intended to replace clinical judgment or guide individual patient care in any manner and is not provided in the course of a professional relationship between a health care provider and a patient. The website creators are not liable for any direct, indirect, incidental, special, consequential or punitive damages arising in any way from the actions taken by medical professionals based on the information provided by the calculators or any other information set forth herein. The creators of this website hereby disclaim any warranty of any kind, express or implied, including but not limited to the implied warranties of title, noninfringement, merchantability and fitness for a particular use or purpose.
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
