--- a/other-calculators.html
+++ b/other-calculators.html
@@ -49,7 +49,7 @@
     <div class="container my-4">
         <h1 class="mb-3">Other Calculators</h1>
         <p class="lead">
-            Additional tools and risk calculators relevant to breast pathology and clinical management[#1].
+            Additional tools and risk calculators relevant to breast pathology and clinical management.
         </p>
         <div class="row g-4">
             <div class="col-md-6 col-lg-3">
@@ -57,7 +57,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Breast Cancer Calculators from MD Anderson Cancer Center</h5>
                         <p class="card-text flex-grow-1">
-                            Suite of breast cancer calculators provided by MD Anderson Cancer Center[#1].
+                            Suite of breast cancer calculators provided by MD Anderson Cancer Center.
                         </p>
                         <a href="https://www.mdanderson.org/research/research-resources/clinical-tools-and-resources/clinical-calculators.html" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
                     </div>
@@ -68,7 +68,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Breast Cancer Risk Assessment Tool for Women with Benign Breast Disease</h5>
                         <p class="card-text flex-grow-1">
-                            Mayo Clinic tool for risk assessment in women with benign breast disease[#1].
+                            Mayo Clinic tool for risk assessment in women with benign breast disease.
                         </p>
                         <a href="https://www.mayoclinic.org/apps/bbd-risktool" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
                     </div>
