--- a/recurrence-treatment.html
+++ b/recurrence-treatment.html
@@ -49,7 +49,7 @@
     <div class="container my-4">
         <h1 class="mb-3">Recurrence/Treatment Calculators</h1>
         <p class="lead">
-            These models are used to estimate the risk of recurrence following a diagnosis of invasive breast cancer and to help guide treatment decisions[#1].
+            These models are used to estimate the risk of recurrence following a diagnosis of invasive breast cancer and to help guide treatment decisions.
         </p>
         <div class="row g-4">
             <div class="col-md-6 col-lg-3">
@@ -57,7 +57,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Predict Tool</h5>
                         <p class="card-text flex-grow-1">
-                            Online tool to estimate how different treatments for early invasive breast cancer might improve survival rates after surgery[#1].
+                            Online tool to estimate how different treatments for early invasive breast cancer might improve survival rates after surgery.
                         </p>
                         <a href="https://breast.predict.nhs.uk/" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
                     </div>
@@ -68,7 +68,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">CTS5 Calculator</h5>
                         <p class="card-text flex-grow-1">
-                            CTS5 model for predicting late distant metastasis for ER-positive breast cancer after endocrine therapy[#1].
+                            CTS5 model for predicting late distant metastasis for ER-positive breast cancer after endocrine therapy.
                         </p>
                         <a href="https://www.cts5-calculator.com/" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
                     </div>
