--- a/risk-assessment.html
+++ b/risk-assessment.html
@@ -50,7 +50,7 @@
     <div class="container my-4">
         <h1 class="mb-3">Risk Assessment Calculators</h1>
         <p class="lead">
-            These models are used to estimate the risk of developing breast cancer in various populations and clinical contexts[1].
+            These models are used to estimate the risk of developing breast cancer in various populations and clinical contexts.
         </p>
         <div class="row g-4">
             <div class="col-md-6 col-lg-3">
@@ -58,7 +58,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Breast Cancer Risk Assessment Tool (Gail Model)</h5>
                         <p class="card-text flex-grow-1">
-                            NCI calculator for estimating absolute risk of developing breast cancer over 5 years and lifetime[1].
+                            NCI calculator for estimating absolute risk of developing breast cancer over 5 years and lifetime.
                         </p>
                         <a href="https://bcrisktool.cancer.gov/calculator.html" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
                     </div>
@@ -69,7 +69,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Tyrer-Cuzick Risk Assessment Calculator</h5>
                         <p class="card-text flex-grow-1">
-                            Tyrer-Cuzick (IBIS) risk calculator for lifetime breast cancer risk assessment[1].
+                            Tyrer-Cuzick (IBIS) risk calculator for lifetime breast cancer risk assessment.
                         </p>
                         <a href="https://magview.com/ibis-risk-calculator/" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
                     </div>
@@ -80,7 +80,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Breast Cancer Surveillance Consortium (BCSC) Invasive Breast Cancer Risk Calculator</h5>
                         <p class="card-text flex-grow-1">
-                            BCSC calculator for estimating 6-year cumulative risk of developing advanced breast cancer[1].
+                            BCSC calculator for estimating 6-year cumulative risk of developing advanced breast cancer.
                         </p>
                         <a href="https://tools.bcsc-scc.org/BC5yearRisk/bc_risk_calculator.htm" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
                     </div>
