--- a/hscore.html
+++ b/hscore.html
@@ -35,16 +35,15 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient mb-4">
-      <div class="container-fluid">
-        <a class="navbar-brand fw-bold" href="index.html">Home</a>
-        <div class="d-flex flex-wrap ms-auto">
-          <a href="frequently-used.html" class="btn btn-light mx-1 my-1 fw-semibold">Frequently Used</a>
-          <a href="risk-assessment.html" class="btn btn-light mx-1 my-1 fw-semibold">Risk Assessment</a>
-          <a href="recurrence-treatment.html" class="btn btn-light mx-1 my-1 fw-semibold">Recurrence/Treatment</a>
-          <a href="other-calculators.html" class="btn btn-light mx-1 my-1 fw-semibold">Other Calculators</a>
+        <div class="container-fluid justify-content-center">
+            <span class="navbar-brand fw-bold mx-4">Home</span>
+            <span class="navbar-brand fw-bold mx-4">Frequently Used</span>
+            <span class="navbar-brand fw-bold mx-4">Risk Assessment</span>
+            <span class="navbar-brand fw-bold mx-4">Recurrence/Treatment</span>
+            <span class="navbar-brand fw-bold mx-4">Other Calculators</span>
         </div>
-      </div>
     </nav>
+
 
     <div class="calculator-container">
         <h2>H-score Calculator</h2>
