--- a/magee.html
+++ b/magee.html
@@ -18,11 +18,11 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient mb-4">
         <div class="container-fluid justify-content-center">
-            <span class="navbar-brand fw-bold mx-4">Home</span>
-            <span class="navbar-brand fw-bold mx-4">Frequently Used</span>
-            <span class="navbar-brand fw-bold mx-4">Risk Assessment</span>
-            <span class="navbar-brand fw-bold mx-4">Recurrence/Treatment</span>
-            <span class="navbar-brand fw-bold mx-4">Other Calculators</span>
+            <a class="navbar-brand fw-bold mx-4" href="index.html">Home</a>
+            <a class="navbar-brand fw-bold mx-4" href="frequently-used.html">Frequently Used</a>
+            <a class="navbar-brand fw-bold mx-4" href="risk-assessment.html">Risk Assessment</a>
+            <a class="navbar-brand fw-bold mx-4" href="recurrence-treatment.html">Recurrence/Treatment</a>
+            <a class="navbar-brand fw-bold mx-4" href="other-calculators.html">Other Calculators</a>
         </div>
     </nav>
 
