--- a/frequently-used.html
+++ b/frequently-used.html
@@ -57,7 +57,7 @@
                 <div class="card h-100 shadow-sm">
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Magee Equations Calculator</h5>
-                        <p class="card-text flex-grow-1">Estimate Oncotype DX recurrence score using pathology data. Contains all information from the UPMC Magee Equations webpage.</p>
+                        <p class="card-text flex-grow-1">Estimates Oncotype DX recurrence score using pathology data. Also predicts response to neoadjuvant chemotherapy as a stand-alone test.</p>
                         <a href="magee.html" class="btn btn-primary mt-auto">Open Calculator</a>
                     </div>
                 </div>
