--- a/magee.html
+++ b/magee.html
@@ -96,8 +96,8 @@
                                 The Magee Decision Algorithm™ helps in triaging cases for molecular testing. Use Magee Equation results and mitotic activity score (part of tumor grading) to triage cases.
                             </p>
                             <ul>
-                                <li><strong>Do Not Send:</strong> All scores &lt;18, or 18-25 with mitosis score 1</li>
-                                <li><strong>Send for Testing:</strong> Any score &gt;25 or 18-25 with mitosis score ≥2</li>
+                                <li><strong>Could safely forgo molecular testing:</strong> All scores &lt;18, or 18-25 with mitosis score 1</li>
+                                <li><strong>Consider sending:</strong> Any score &gt;25 or 18-25 with mitosis score ≥2</li>
                             </ul>
 
                             <h5>Background</h5>
