--- a/npi.html
+++ b/npi.html
@@ -75,6 +75,7 @@
             </div>
             <button type="button" class="btn btn-primary" onclick="calculateNPI()">Calculate</button>
             <button type="button" class="btn btn-outline-secondary ms-2" onclick="window.open('https://pmc.ncbi.nlm.nih.gov/articles/PMC8870306/', '_blank')">More Information</button>
+            <button type="button" class="btn btn-outline-secondary ms-2" onclick="window.open('https://pubmed.ncbi.nlm.nih.gov/?term=Nottingham+Prognostic+Index', '_blank')">PubMed</button>
         </form>
 
         <div class="result-alert alert alert-primary" role="alert">
