--- a/magee.html
+++ b/magee.html
@@ -60,6 +60,8 @@
                 <input type="number" class="form-control" id="ki67" min="0" max="100" step="0.1" required>
             </div>
             <button type="button" class="btn btn-primary" onclick="calculateMagee()">Calculate</button>
+            <button type="button" class="btn btn-outline-secondary ms-2" onclick="window.open('https://pubmed.ncbi.nlm.nih.gov/?term=Magee+Equation', '_blank')">PubMed</button>
+
         </form>
 
         <div class="result-alert alert alert-primary" role="alert">
