--- a/hscore.html
+++ b/hscore.html
@@ -70,6 +70,7 @@
             </div>
             <button type="button" class="btn btn-primary" onclick="calculateHScore()">Calculate</button>
             <button type="button" class="btn btn-outline-secondary ms-2" onclick="window.open('https://pmc.ncbi.nlm.nih.gov/articles/PMC11141889/', '_blank')">More Information</button>
+            <button type="button" class="btn btn-outline-secondary ms-2" onclick="window.open('https://pubmed.ncbi.nlm.nih.gov/?term=H-score+immunohistochemistry', '_blank')">PubMed</button>
         </form>
 
         <div class="result-alert alert alert-primary" role="alert">
