--- a/pepi.html
+++ b/pepi.html
@@ -77,6 +77,7 @@
             </div>
             <button type="button" class="btn btn-primary" onclick="calculatePEPI()">Calculate</button>
             <button type="button" class="btn btn-outline-secondary ms-2" onclick="window.open('https://pmc.ncbi.nlm.nih.gov/articles/PMC2556704/', '_blank')">More Information</button>
+            <button type="button" class="btn btn-outline-secondary ms-2" onclick="window.open('https://pubmed.ncbi.nlm.nih.gov/?term=Preoperative+Endocrine+Prognostic+Index+breast+cancer', '_blank')">PubMed</button>
         </form>
 
         <div class="result-alert alert alert-primary" role="alert">
