--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <div class="section-title">Acknowledgements</div>
         <p>
-            tell me what to write here chacha
+            We thank the clinicians, scientists, and investigators who have created these tools and made them available for anyone to use.
         </p>
 
         <div class="section-title">Disclaimer</div>
