--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Breast Pathology Calculators</title>
+    <title>Breast Cancer Calculators</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -46,7 +46,7 @@
 
 
     <div class="container my-4">
-        <h1 class="mb-3">Breast Pathology Calculators</h1>
+        <h1 class="mb-3">Breast Cancer Calculators</h1>
         <p class="lead">
             This website provides a comprehensive suite of breast cancer calculators and risk assessment tools for healthcare professionals. The calculators are designed to assist with breast cancer prognostication, risk stratification, and treatment planning using validated models and up-to-date clinical evidence. Each tool is presented with transparent methodology and reference information, supporting informed clinical decision-making in both pathology and multidisciplinary settings.
         </p>
@@ -54,7 +54,7 @@
             The calculators are grouped as the following:
         </p>
         <ul>
-            <li><strong>Frequently Used Calculators:</strong> Core tools for pathologists, including Magee Equations, H-score, NPI, PEPI, and Residual Cancer Burden.</li>
+            <li><strong>Frequently Used Pathology Calculators:</strong> Core tools for pathologists, including Magee Equations, H-score, NPI, PEPI, and Residual Cancer Burden.</li>
             <li><strong>Risk Assessment Models:</strong> Tools for estimating the risk of developing breast cancer, including the Gail Model, Tyrer-Cuzick, and BCSC calculators.</li>
             <li><strong>Recurrence/Treatment Models:</strong> Models for assessing recurrence risk after invasive breast cancer diagnosis and for guiding therapy, such as Predict and CTS5.</li>
             <li><strong>Other Calculators:</strong> Additional resources for specialized scenarios, including MD Anderson and Mayo Clinic tools.</li>
