--- a/frequently-used.html
+++ b/frequently-used.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frequently Used Calculators</title>
+    <title>Frequently Used Pathology Calculators</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -48,7 +48,7 @@
 
 
     <div class="container my-4">
-        <h1 class="mb-3">Frequently Used Calculators</h1>
+        <h1 class="mb-3">Frequently Used Pathology Calculators</h1>
         <p class="lead">
             These calculators are commonly used by pathologists for breast cancer prognostication and reporting.
         </p>
