--- a/risk-assessment.html
+++ b/risk-assessment.html
@@ -81,7 +81,7 @@
                         <p class="card-text flex-grow-1">
                             BCSC calculator for estimating 6-year cumulative risk of developing advanced breast cancer.
                         </p>
-                        <a href="https://tools.bcsc-scc.org/BC5yearRisk/bc_risk_calculator.htm" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
+                        <a href="https://tools.bcsc-scc.ucdavis.edu/BC5yearRisk/#/" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
                     </div>
                 </div>
             </div>
