--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background: #FFC0CB;
+            background: linear-gradient(pink, white);
         }
         .section-title {
             margin-top: 2.5rem;
