--- a/frequently-used.html
+++ b/frequently-used.html
@@ -102,7 +102,7 @@
                         <p class="card-text flex-grow-1">
                             Tool for residual cancer burden assessment after neoadjuvant therapy.
                         </p>
-                        <a href="https://www.mdanderson.org/breastcancer_RCB" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
+                        <a href="https://www3.mdanderson.org/app/medcalc/index.cfm?pagename=jsconvert3" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
                     </div>
                 </div>
             </div>
