--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient mb-4">
+    <nav class="navbar navbar-expand-lg navbar-dark mb-4" style="background-color: #e83e8c;">
         <div class="container-fluid justify-content-center">
             <a class="navbar-brand fw-bold mx-4" href="index.html">Home</a>
             <a class="navbar-brand fw-bold mx-4" href="frequently-used.html">Frequently Used</a>
