--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Frequently Used Calculators</h5>
                         <p class="card-text flex-grow-1">Magee, H-score, NPI, PEPI, Residual Cancer Burden</p>
-                        <a href="frequently-used.html" class="btn btn-primary mt-auto">View Group</a>
+                        <a href="frequently-used.html" class="btn btn-primary mt-auto" style="background-color: #e83e8c;">View Group</a>
                     </div>
                 </div>
             </div>
