--- a/other-calculators.html
+++ b/other-calculators.html
@@ -69,7 +69,7 @@
                         <p class="card-text flex-grow-1">
                             Mayo Clinic tool for risk assessment in women with benign breast disease.
                         </p>
-                        <a href="https://www.mayoclinic.org/apps/bbd-risktool" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
+                        <a href="https://www.mayoclinic.org/breast-cancer-risk-prediction/itt-20150095" class="btn btn-primary mt-auto" target="_blank" rel="noopener">External Link</a>
                     </div>
                 </div>
             </div>
