--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Frequently Used Pathology Calculators</h5>
                         <p class="card-text flex-grow-1">Magee, H-score, NPI, PEPI, Residual Cancer Burden</p>
-                        <a href="frequently-used.html" class="btn btn-primary mt-auto" style="background-color: #e83e8c;">View Group</a>
+                        <a href="frequently-used.html" class="btn btn-primary mt-auto" style="background-color: #ffb6c1;">View Group</a>
                     </div>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Risk Assessment Calculators</h5>
                         <p class="card-text flex-grow-1">Gail Model, Tyrer-Cuzick, BCSC</p>
-                        <a href="risk-assessment.html" class="btn btn-primary mt-auto">View Group</a>
+                        <a href="risk-assessment.html" class="btn btn-primary mt-auto" style="background-color: #ffb6c1;">View Group</a>
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Recurrence/Treatment Calculators</h5>
                         <p class="card-text flex-grow-1">Predict Tool, CTS5</p>
-                        <a href="recurrence-treatment.html" class="btn btn-primary mt-auto">View Group</a>
+                        <a href="recurrence-treatment.html" class="btn btn-primary mt-auto" style="background-color: #ffb6c1;">View Group</a>
                     </div>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Other Calculators</h5>
                         <p class="card-text flex-grow-1">MD Anderson, Mayo Clinic, and more</p>
-                        <a href="other-calculators.html" class="btn btn-primary mt-auto">View Group</a>
+                        <a href="other-calculators.html" class="btn btn-primary mt-auto" style="background-color: #ffb6c1;">View Group</a>
                     </div>
                 </div>
             </div>
