--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
         .card-title {
             min-height: 3.5rem;
         }
+        .btn-primary,
+        .btn-primary:active,
+        .btn-primary:focus,
+        .btn-primary:hover {
+            background-color: #e83e8c !important;
+            border-color: #e83e8c !important;
+        }
+        .acknowledgements {
+            color: #000 !important;
+        }
         @media (max-width: 767px) {
             .card.h-100 {
                 min-height: 0;
@@ -43,7 +53,6 @@
             <a class="navbar-brand fw-bold mx-4" href="other-calculators.html">Other Calculators</a>
         </div>
     </nav>
-
 
     <div class="container my-4">
         <h1 class="mb-3">Breast Cancer Calculators</h1>
@@ -66,7 +75,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Frequently Used Pathology Calculators</h5>
                         <p class="card-text flex-grow-1">Magee, H-score, NPI, PEPI, Residual Cancer Burden</p>
-                        <a href="frequently-used.html" class="btn btn-primary mt-auto" style="background-color: #ffb6c1;">View Group</a>
+                        <a href="frequently-used.html" class="btn btn-primary mt-auto">View Group</a>
                     </div>
                 </div>
             </div>
@@ -75,7 +84,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Risk Assessment Calculators</h5>
                         <p class="card-text flex-grow-1">Gail Model, Tyrer-Cuzick, BCSC</p>
-                        <a href="risk-assessment.html" class="btn btn-primary mt-auto" style="background-color: #ffb6c1;">View Group</a>
+                        <a href="risk-assessment.html" class="btn btn-primary mt-auto">View Group</a>
                     </div>
                 </div>
             </div>
@@ -84,7 +93,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Recurrence/Treatment Calculators</h5>
                         <p class="card-text flex-grow-1">Predict Tool, CTS5</p>
-                        <a href="recurrence-treatment.html" class="btn btn-primary mt-auto" style="background-color: #ffb6c1;">View Group</a>
+                        <a href="recurrence-treatment.html" class="btn btn-primary mt-auto">View Group</a>
                     </div>
                 </div>
             </div>
@@ -93,7 +102,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Other Calculators</h5>
                         <p class="card-text flex-grow-1">MD Anderson, Mayo Clinic, and more</p>
-                        <a href="other-calculators.html" class="btn btn-primary mt-auto" style="background-color: #ffb6c1;">View Group</a>
+                        <a href="other-calculators.html" class="btn btn-primary mt-auto">View Group</a>
                     </div>
                 </div>
             </div>
@@ -102,11 +111,10 @@
         <hr class="my-4">
 
         <div class="section-title">Acknowledgements</div>
-        <p>
+        <p class="acknowledgements">
             We thank the clinicians, scientists, and investigators who have created these tools and made them available for anyone to use.
         </p>
 
-        <div class="section-title">Disclaimer</div>
         <div class="alert alert-warning" role="alert">
             These calculators should only be used by medical professionals who understand their usefulness and limitations. Medical professionals should use these calculators at their own discretion and this information should not be used for the diagnosis or treatment of any health problem or disease. The information is not intended to replace clinical judgment or guide individual patient care in any manner and is not provided in the course of a professional relationship between a health care provider and a patient. The website creators are not liable for any direct, indirect, incidental, special, consequential or punitive damages arising in any way from the actions taken by medical professionals based on the information provided by the calculators or any other information set forth herein. The creators of this website hereby disclaim any warranty of any kind, express or implied, including but not limited to the implied warranties of title, noninfringement, merchantability and fitness for a particular use or purpose.
         </div>
